--- a/css/animation.css
+++ b/css/animation.css
@@ -1,38 +1,8 @@
-.bg-animation::before {
-content: "";
-animation-name: pageAnime;
-background: #69C956;
-position: fixed;
-z-index: 3;
-top: 0;
-left: 0;
-width: 100%;
-height: 100vh;
-animation-duration: 1s;
-animation-delay: 0;
-animation-timing-function: ease-in-out;
-animation-fill-mode: forwards;
-pointer-events: none;
+.bg-aniamtion {
+  animation: backgroundFade 0.5s ease-in-out;
 }
 
-@keyframes pageAnime {
-0% {
-transform-origin: top;
-transform: scaleY(0);
-}
-
-30% {
-transform-origin: top;
-transform: scaleY(1);
-}
-
-70% {
-transform-origin: bottom;
-transform: scaleY(1);
-}
-
-100% {
-transform-origin: bottom;
-transform: scaleY(0);
-}
+@keyframes backgroundFade {
+  0%   { background-color: #f0f0f0; }
+  100% { background-color: #ffffff; }
 }
