--- a/css/animation.css
+++ b/css/animation.css
@@ -1,14 +1,38 @@
-@keyframes sweepLight {
-  0% {
-    background-position: -200px 0;
-  }
-  100% {
-    background-position: 200px 0;
-  }
+.bg-animation::before {
+content: "";
+animation-name: pageAnime;
+background: #69C956;
+position: fixed;
+z-index: 3;
+top: 0;
+left: 0;
+width: 100%;
+height: 100vh;
+animation-duration: 1s;
+animation-delay: 0;
+animation-timing-function: ease-in-out;
+animation-fill-mode: forwards;
+pointer-events: none;
 }
 
-.bg-aniamtion {
-  background-image: linear-gradient(90deg, rgba(255,255,255,0.05) 0%, rgba(255,255,255,0.15) 50%, rgba(255,255,255,0.05) 100%);
-  background-size: 200px 100%;
-  animation: sweepLight 1.5s ease-in-out;
+@keyframes pageAnime {
+0% {
+transform-origin: top;
+transform: scaleY(0);
+}
+
+30% {
+transform-origin: top;
+transform: scaleY(1);
+}
+
+70% {
+transform-origin: bottom;
+transform: scaleY(1);
+}
+
+100% {
+transform-origin: bottom;
+transform: scaleY(0);
+}
 }
