--- a/css/player.css
+++ b/css/player.css
@@ -14,7 +14,7 @@
   position: absolute;
   width: 100%;
   height: 100%;
-  object-fit: cover;
+  object-fit: contain; /* ← 変更点 */
   z-index: 0;
 }
 
