--- a/css/player.css
+++ b/css/player.css
@@ -113,4 +113,5 @@ body.dark input[type="range"].seekBar.dark-complete {
 .hide-controls .videoControls {
   opacity: 0 !important;
   visibility: hidden !important;
+  transition: opacity 0.3s ease;
 }
